# sdc-lab-3-2-ds24m035

./: README.md
1-docker-hello-world/: app.py
assignment/: .env.example  .gitignore  .gitmodules  README.md  assignment.ipynb  docker-compose.yaml  pyproject.toml  redis.conf  requirements.txt
assignment/api/: app.py  streamlit.py  tasks.py  worker.py
assignment/api/image_generator/: __init__.py  image_generator.py  sd_api.py  stability_api.py
assignment/api/models/: models.py
